Add icon cache to improve icon view performance. Initial cache size is 1000 and can be changed with "Icon Cache Size" general config option.

Patch from Pedro Miguel Carvalho.
BUG:272583